fix Map defensive copy; simplify existing defensive copies